--- a/Temperature Comveter/index.html
+++ b/Temperature Comveter/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Temperature Converter</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
             <button type="submit" id="convertbtn"> CONVERT</button>
 
             <div class="result">
-                <p>Result: <output id="result">---</output></p>
+                <p>Result: <output id="result"></output></p>
             </div>
 
         </form>
