Event Listener Added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <div class="container">
     <div id="main" class="card card-body">
 
-      <h2 class="title">Add Items</h2>
+      <h2 class="title" id="add">Add Items</h2>
+      
+      <button id="subButton" class="sub" onclick="handleClick()">Submit</button>
+
+      <button id="button" class="sub">Submit</button>
 
       <form>
         <input type="text">
