Simple Login Form

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
   </div> <!-- container -->
 
 
+  <form action="" id="signUp">
+    <input type="text" placeholder="First Name" id="firstName">
+    <input type="text" placeholder="Last Name" id="lastName">
+    <input type="password" placeholder="Password" id="password">
+
+    <button type="submit">Submit</button>
+  </form>
+
+
+
 
     <script src="Jintro.js"></script>
 </body>
